More Calendar Page Changes

--- a/SimpleComputer/SimpleComputer.csproj
+++ b/SimpleComputer/SimpleComputer.csproj
@@ -100,6 +100,7 @@
     </Compile>
     <Compile Include="Controls\CalendarDayControl.cs" />
     <Compile Include="Converters\BooleanToVisibilityConverter.cs" />
+    <Compile Include="Converters\BoolToColorConverter.cs" />
     <Compile Include="Converters\DateTimeToStringConverter.cs" />
     <Compile Include="Models\Appointment.cs" />
     <Compile Include="Shell.xaml.cs">
