--- a/SimpleComputer/SimpleComputer.csproj
+++ b/SimpleComputer/SimpleComputer.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Converters\BooleanToVisibilityConverter.cs" />
     <Compile Include="Converters\BoolToColorConverter.cs" />
     <Compile Include="Converters\DateTimeToStringConverter.cs" />
+    <Compile Include="Gpio\ButtonMonitor.cs" />
     <Compile Include="Models\Appointment.cs" />
     <Compile Include="Shell.xaml.cs">
       <DependentUpon>Shell.xaml</DependentUpon>
